--- a/MyTripDiary/PodFile
+++ b/MyTripDiary/PodFile
@@ -4,11 +4,8 @@ platform :ios, '12.0'
 target 'MyTripDiary' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
-  
+  pod 'ReachabilitySwift'
 # Pods for MyTripDiary
-  pod 'FacebookCore'
-  pod 'FacebookLogin'
-  pod 'FacebookShare'
   
 target 'MyTripDiaryTests' do
     inherit! :search_paths
